# pico-flake

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main.c  result
scripts/: build.sh  dev-env-setup.sh  flash.sh
